@@ -1,3 +1,15 @@
+2004-05-05  Nick Clifton  <nickc@redhat.com>
+
+	PR/136
+	* cache.c (bfd_cache_lookup_worker): Call abort() rather than
+	returning NULL as most users of this function do not check its
+	return value.
+
+2004-05-05  Nick Clifton  <nickc@redhat.com>
+
+	* cache.c (bfd_cache_lookup): Improve formatting.
+	* archive.c: Fix formatting.
+
 2004-05-05  Peter Barada  <peter@the-baradas.com>
 
 	* bfd_archures.c(bfd_architecture): Add 521x,5249,547x,548x.
